--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -7,6 +7,12 @@
         <td>
             {% if user == current_user %}
             <p><a href="{{ url_for('edit_profile') }}">Edit your profile</a></p>
+            {% else  %}
+                {% if user in current_user.followed %}
+                <p><a href="{{ url_for('unfollow',username = user.username)}}">Unfollow this user</a></p>
+                {% else %}
+                <p><a href="{{  url_for('follow',username = user.username)}}">Follow this user</a></p>
+                {% endif %}
             {% endif %}
             <h1>{{user.username}}</h1>
             {% if user.about_me %}
