--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -5,46 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>
-      {% if title %} 
-      {{title}} 
-      {% else %} 
-      Welcome to micro-blog 
-      {% endif %}
+      {% if title %} {{title}} {% else %} Welcome to micro-blog {% endif %}
     </title>
   </head>
   <body>
-    
     <!--Nav section-->
     <div>
-      Micro-blog : 
-      <a href="{{url_for('index')}}">Home</a>
+      Micro-blog :
       <!--If the current user is anonymous display the login link else display the logout link-->
-      {% if  current_user.is_anonymous %}
+      {% if current_user.is_anonymous %}
       <a href="{{url_for('login')}}">Login</a>
       <a href="{{url_for('register')}}">Register</a>
       {% else %}
-    
-      <a href="{{url_for('user_profile',username = current_user.username)}}">My Profile</a>
+      <a href="{{url_for('index')}}">Home</a>
+      <a href="{{url_for('explore')}}">Explore</a>
+      <a href="{{url_for('user_profile',username = current_user.username)}}"
+        >My Profile</a
+      >
       <a href="{{url_for('edit_profile')}}">Edit profile</a>
       <a href="{{url_for('logout')}}">Logout</a>
       {% endif %}
     </div>
-    <hr>
-    {% block content %}
-    {% endblock %}
-    
-    
+    <hr />
+    {% block content %} {% endblock %}
+
     <!--display the flashed messages from the flash function-->
-    {% with messages = get_flashed_messages() %}
-    {% if messages %}
+    {% with messages = get_flashed_messages() %} {% if messages %}
     <ul>
       {% for message in messages %}
       <li>{{message}}</li>
       {% endfor %}
     </ul>
-    {% endif %}
-    {% endwith %}
-
-
+    {% endif %} {% endwith %}
   </body>
-  </html>
+</html>
