--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -45,4 +45,11 @@
     {% include "_post.html" %}
 {% endfor %}
 
+<p>
+    {% if prev_url %}
+    <a href="{{prev_url}}">Newer posts</a>
+    {% endif %} {% if next_url %}
+    <a href="{{next_url}}">Older posts</a>
+    {% endif %}
+</p>
 {% endblock %}
